<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cadastro_Atividade_Layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/atividade_1"
            style="@style/TextView_cadastro_atividade_layout"/>
        <RadioGroup
            android:id="@+id/radioGroup_atv_1"
            style="@style/RadioGroup_cadastro_atividade_layout">

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_1"
                style="@style/RadioButton_cadastro_atividade_layout"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_2"
                style="@style/RadioButton_cadastro_atividade_layout"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_3"
                style="@style/RadioButton_cadastro_atividade_layout"/>

        </RadioGroup>

        <TextView
            android:text="@string/atividade_2"
            style="@style/TextView_cadastro_atividade_layout"/>
        <RadioGroup
            android:id="@+id/radioGroup_atv_2"
            style="@style/RadioGroup_cadastro_atividade_layout">

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_1"
                style="@style/RadioButton_cadastro_atividade_layout"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_2"
                style="@style/RadioButton_cadastro_atividade_layout"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_3"
                style="@style/RadioButton_cadastro_atividade_layout"/>

        </RadioGroup>

        <TextView
            android:text="@string/atividade_3"
            style="@style/TextView_cadastro_atividade_layout"/>
        <RadioGroup
            android:id="@+id/radioGroup_atv_3"
            style="@style/RadioGroup_cadastro_atividade_layout">

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_1"
                style="@style/RadioButton_cadastro_atividade_layout"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_2"
                style="@style/RadioButton_cadastro_atividade_layout"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_3"
                style="@style/RadioButton_cadastro_atividade_layout"/>

        </RadioGroup>

        <TextView
            android:text="@string/atividade_4"
            style="@style/TextView_cadastro_atividade_layout"/>
        <RadioGroup
            android:id="@+id/radioGroup_atv_4"
            style="@style/RadioGroup_cadastro_atividade_layout">

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_1"
                style="@style/RadioButton_cadastro_atividade_layout"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_2"
                style="@style/RadioButton_cadastro_atividade_layout"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_3"
                style="@style/RadioButton_cadastro_atividade_layout"/>

        </RadioGroup>

        <TextView
            android:text="@string/atividade_5"
            style="@style/TextView_cadastro_atividade_layout"/>
        <RadioGroup
            android:id="@+id/radioGroup_atv_5"
            style="@style/RadioGroup_cadastro_atividade_layout">

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_1"
                style="@style/RadioButton_cadastro_atividade_layout"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_2"
                style="@style/RadioButton_cadastro_atividade_layout"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_3"
                style="@style/RadioButton_cadastro_atividade_layout"/>

        </RadioGroup>

        <TextView
            android:text="@string/atividade_6"
            style="@style/TextView_cadastro_atividade_layout"/>
        <RadioGroup
            android:id="@+id/radioGroup_atv_6"
            style="@style/RadioGroup_cadastro_atividade_layout">

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_1"
                style="@style/RadioButton_cadastro_atividade_layout"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_2"
                style="@style/RadioButton_cadastro_atividade_layout"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_3"
                style="@style/RadioButton_cadastro_atividade_layout"/>

        </RadioGroup>

        <TextView
            android:text="@string/atividade_7"
            style="@style/TextView_cadastro_atividade_layout"/>
        <RadioGroup
            android:id="@+id/radioGroup_atv_7"
            style="@style/RadioGroup_cadastro_atividade_layout">

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_1"
                style="@style/RadioButton_cadastro_atividade_layout"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_2"
                style="@style/RadioButton_cadastro_atividade_layout"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_3"
                style="@style/RadioButton_cadastro_atividade_layout"/>

        </RadioGroup>

        <TextView
            android:text="@string/atividade_8"
            style="@style/TextView_cadastro_atividade_layout"/>
        <RadioGroup
            android:id="@+id/radioGroup_atv_8"
            style="@style/RadioGroup_cadastro_atividade_layout">

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_1"
                style="@style/RadioButton_cadastro_atividade_layout"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_2"
                style="@style/RadioButton_cadastro_atividade_layout"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_3"
                style="@style/RadioButton_cadastro_atividade_layout"/>

        </RadioGroup>

        <TextView
            android:text="@string/atividade_9"
            style="@style/TextView_cadastro_atividade_layout"/>
        <RadioGroup
            android:id="@+id/radioGroup_atv_9"
            style="@style/RadioGroup_cadastro_atividade_layout">

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_1"
                style="@style/RadioButton_cadastro_atividade_layout"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_2"
                style="@style/RadioButton_cadastro_atividade_layout"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_3"
                style="@style/RadioButton_cadastro_atividade_layout"/>

        </RadioGroup>

        <TextView
            android:text="@string/atividade_10"
            style="@style/TextView_cadastro_atividade_layout"/>
        <RadioGroup
            android:id="@+id/radioGroup_atv_10"
            style="@style/RadioGroup_cadastro_atividade_layout">

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_1"
                style="@style/RadioButton_cadastro_atividade_layout"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_2"
                style="@style/RadioButton_cadastro_atividade_layout"/>

            <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/op_3"
                style="@style/RadioButton_cadastro_atividade_layout"/>

        </RadioGroup>

        <Button
            android:id="@+id/bt_salvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_salvar"
            android:onClick="salvar"/>

    </LinearLayout>

</ScrollView>